upgrading tests to junit5, fixing controller tests